@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.1.1.1 2002/12/07 00:27:04 rh Exp $
+$NetBSD: distinfo,v 1.2 2003/01/28 08:36:59 jlam Exp $
 
-SHA1 (cgoban-unix-2.4.55.tar.bz2) = 4365a5b7a1d8426f87d99f5c62754f3dd542519e
-Size (cgoban-unix-2.4.55.tar.bz2) = 1015681 bytes
+SHA1 (cgoban-unix-2.4.57.tar.bz2) = b31fdfae29a611ee8ab066176b22d4c23b631983
+Size (cgoban-unix-2.4.57.tar.bz2) = 807479 bytes
